2002-05-06  Michael Yount <csf@moscow.com>

	* bin/mj_wwwadm, bin/mj_wwwusr:  
	Deal with special characters in query strings more thoroughly.
	Bugfix:  Display user address more clearly if an invalid list
	is given.  Validate the user address more robustly.
	Thanks to Larry Rosenbaum and Roger Klorese.
	
	* lib/Mj/Format.pm:  (cgidata)  Bugfix:  Escape 
	non-alphanumeric characters in query strings.  
	Thanks to Nick Simicich.

	* lib/Mj/Log.pm:  (message)  Bugfix:  Double percent signs
	to avoid warnings.  Thanks to Nick Simicich.
	
2002-05-05  Jason Tibbitts  <tibbs@math.uh.edu>

	* lib/Mj/Deliver/Dest.pm (flush): When generating a bounce for an
	address that timed out, include a useful error message instead of
	printing a blank and generating some undef warnings.

2002-05-04  Jason Tibbitts  <tibbs@math.uh.edu>

	* lib/Mj/Lock.pm: Use Time::HiRes if available.
	(lock): Store the time the lock was acquired.
	(unlock): Log the time elapsed since the lock was acquired.

2002-04-26  Michael Yount <csf@moscow.com>

	* lib/Majordomo.pm:  (connect, dispatch)  Determine if an
	address is defined before testing its validity.
	Thanks to Brock Rozen.

2002-04-25  Michael Yount <csf@moscow.com>

	* lib/Mj/Archive.pm:  (_sort_archives, _by_date)  Use a
	separate routine for archive sorting for compatibility
	with perl 5.005.02 and earlier versions.  Thanks
	to Larry Rosenbaum.

	* lib/Mj/Format.pm:  (archive)  Bugfix:  remove unnecessary
	array reversal.

	* lib/Mj/Resend.pm:  (_r_ck_header)  Recursively check
	the parts of a message for headers which match the admin_headers,
	noarchive_headers, and taboo_headers settings.  Those three
	settings now apply to all headers within a message, rather than
	just the top-level headers.

2002-04-20  Michael Yount <csf@moscow.com>

	* bin/mj_queuerun, mj_queueserv, mj_shutdown:  Add 3rd
	argument to syswrite() calls for compatibility with
	perl 5.005.02 and earlier versions.  Thanks to Larry Rosenbaum.
