@@ -1,3 +1,9 @@
+2002-05-06  Jason Tibbitts  <tibbs@math.uh.edu>
+
+	* lib/Mj/Deliver/Dest.pm (_gen_bounces): New function: generate a
+	bounce for each failed address.
+	(flush): Remove bounce generation and call _gen_bounces instead.
+
 2002-05-06  Michael Yount <csf@moscow.com>
 
 	* bin/mj_wwwadm, bin/mj_wwwusr:  
